--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
