--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^7.1.2",
     "@tailwindcss/vite": "^4.1.10",
     "apexcharts": "^4.7.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
@@ -28,7 +30,7 @@
     "react-tooltip": "^5.29.1",
     "signature_pad": "^5.0.10",
     "sweetalert2": "^11.22.0",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
