--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_API_URL = 'https://cookingbackend.pythonanywhere.com'
+VITE_API_URL = 'https://egovern.pythonanywhere.com
+'
 
 # http://127.0.0.1:8000
-# https://cookingbackend.pythonanywhere.com
+# https://egovern.pythonanywhere.com
