--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
+    "mammoth": "^1.10.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
@@ -29,6 +30,7 @@
     "react-signature-pad-wrapper": "^4.1.1",
     "react-tooltip": "^5.29.1",
     "signature_pad": "^5.0.10",
+    "simple-datatables": "^10.0.0",
     "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
