--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_URL = 'https://egovern.pythonanywhere.com
+VITE_API_URL = 'https://cookingbackend.pythonanywhere.com
 '
 
 # http://127.0.0.1:8000
-# https://egovern.pythonanywhere.com
+# https://cookingbackend.pythonanywhere.com
